# crossref-cli

./: .SRCINFO  .gitignore  PKGBUILD  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  weekly-rebuild.yml
src/crossref_tool/: cli.py  config.py  core.py  http.py
src/crossref_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli.py  test_config.py  test_core.py  test_http.py
