[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crossref-tool"
version = "0.1.0"
description = "Crossref REST API CLI"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"

[project.scripts]
crossref = "crossref_tool.cli:main"

[project.urls]
Homepage = "https://github.com/decent-tools-for-thought/crossref-cli"
Repository = "https://github.com/decent-tools-for-thought/crossref-cli"
Issues = "https://github.com/decent-tools-for-thought/crossref-cli/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
