[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crossref-tool"
version = "0.1.0"
description = "Crossref REST API CLI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

[project.scripts]
crossref = "crossref_tool.cli:main"

[project.urls]
Homepage = "https://github.com/decent-tools-for-thought/crossref-cli"
Repository = "https://github.com/decent-tools-for-thought/crossref-cli"
Issues = "https://github.com/decent-tools-for-thought/crossref-cli/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
  "mypy>=1.18.2",
  "ruff>=0.13.2",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["src/crossref_tool"]
strict = true
warn_unused_ignores = true
